sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

	var swapped=false;
	
	do{
		
		for(i<-getNombreValeurs()-2 to 0){

			for(j<-0 to i){
				
				if(plusPetit(j+1,j)){
					echange(j,j+1);
					swapped=true;
				}else{
					return;
					swapped=false;							
				}
				i=i+1;
			}
		}
	}while(swapped==false)
}




